src/objects/SFDC_Job__c.object
<CustomObject>
    <description>Job Position to be filled</description>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001WXBuEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Comments__c</fullName>
        <label>Job Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Filled__c</fullName>
        <label>Job Filled</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Hire_Date__c</fullName>
        <label>Job Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <displayFormat>JOB{00000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Job_Requirements__c</fullName>
        <label>Job Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <picklist>
            <picklistValues>
                <fullName>01-Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02-Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-Interviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-Offer Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-Routing Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-Offer Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07-Offer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08-Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09-On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Officially_Open_Date__c</fullName>
        <label>Officially Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>SFDC_Department__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>R00N30000001WXBtEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Hire_Date__c</fullName>
        <label>Target Hire Date</label>
        <type>Date</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Job_Name__c</columns>
        <columns>Job_Description__c</columns>
        <columns>SFDC_Department__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Target_Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>